--- a/app/code/Tigren/Portfolio/view/frontend/layout/portfolio_index_display.xml
+++ b/app/code/Tigren/Portfolio/view/frontend/layout/portfolio_index_display.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-    <referenceContainer name="content">
-        <block class="Tigren\Portfolio\Block\Display" name="portfolio_display" template="Tigren_Portfolio::category.phtml" />
-    </referenceContainer>
+
+    <body>
+        <referenceContainer name="content">
+            <block class="Tigren\Portfolio\Block\Display" name="portfolio_display" template="Tigren_Portfolio::category.phtml">
+            </block>
+        </referenceContainer>
+    </body>
 </page>
