--- a/app/code/Tigren/Portfolio/view/frontend/templates/category.phtml
+++ b/app/code/Tigren/Portfolio/view/frontend/templates/category.phtml
@@ -16,18 +16,10 @@
           data-mage-init='{"Tigren_Portfolio/js/kiwicount": {"maxlen":"150","messagebox":"charNum"}
 }'></textarea>
 
-<script type="text/x-magento-init">
-{
-    "#my-element": {
-        "myCustomData": {
-            "foo": "bar",
-            "baz": 123
-        }
-    }
-}
-
-
 </script>
+
+
+<div data-mage-init='{"passscript":{"title":"sdfafsd"}}' />
 
 <span id="charNum"></span>
 <style>
